# roger

roger-main/: pyproject.toml  test.py
roger-main/roger/: __init__.py  decorator.py  logger.py  response.py  roger.py
roger-main/roger/memory/: cell.py  memory.py  overflow.py
roger-main/roger/provider/: status.py
roger-main/roger/provider/oai/: completion.py  embedding.py  error.py  keys.py  tokenizer.py
roger-main/roger/task/: base.py  keyword_extraction.py  query_classification.py  question_generation.py  response_validation.py  summarization.py
roger-main/tests/: pytest.ini  sample.py
roger-main/tests/unittests/: tests_roger.py
roger-main/tests/unittests/memory/: tests_cell.py  tests_memory.py
roger-main/tests/unittests/provider/oai/: tests_completion.py  tests_completion_error.py  tests_embedding.py  tests_tokenizer.py
roger-main/tests/unittests/task/: tests_keyword_extraction.py  tests_query_classification.py  tests_question_generation.py  tests_reponse_validation.py  tests_summarization.py
