[tool.poetry]
name = "roger"
version = "0.1.4"
description = ""
authors = ["Chunghyeon Nam <a71335976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.2.4"
tiktoken = "^0.5.1"
scikit-learn = "^1.3.2"
pydantic = "^2.5.0"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
pytest-env = "^1.1.1"
pytest-stress = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
